# columnfile-cat

./: Makefile.am  columnfile-cat.cc  configure.ac
